syntax = "proto3";

package hashicorp.watchtower.controller.iam.store.v1;
option go_package = "github.com/hashicorp/watchtower/internal/iam/store;store";

import "timestamp.proto";
import "scope.proto";

message AuthMethod {
  // @inject_tag: gorm:"primary_key"
  uint32 id = 1;

  // create_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp create_time = 2;

  // update_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp update_time = 3;

  // public_id is used to access the AuthMethod via an API
  string public_id = 4;

  // FriendlyName is the optional friendly name used to
  // access the AuthMethod via an API
  // @inject_tag: `gorm:"default:null"`
  string friendly_name = 5;

  // primary scope id of the PrimaryScope
  // @inject_tag: `gorm:"default:null"`
  uint32 primary_scope_id = 6;
  // @inject_tag: gorm:"foreignkey:ScopeId"
  Scope primary_scope = 7;

  // disabled is by default false.
  bool disabled = 9;

  // Type of auth method
  uint32 type = 10;
}