syntax = "proto3";

package controller.storage.iam.store.v1;
option go_package = "github.com/hashicorp/watchtower/internal/iam/store;store";

import "controller/storage/iam/store/v1/timestamp.proto";
import "controller/storage/iam/store/v1/scope.proto";

message GroupMemberUser {
  // create_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp create_time = 1;

  // update_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp update_time = 2;

  // group_id is the Group of this GroupMemberUser.
  // @inject_tag: gorm:"primary_key"
  string group_id = 3;

  // @inject_tag: gorm:"primary_key"
  string member_id = 4;
}

message GroupMemberView {
  // create_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp create_time = 1;

  // update_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp update_time = 2;

  // group_id is the Group of this GroupMember.
  string group_id = 3;

  // member_id of the GroupMember
  string member_id = 4;

  // GroupMember type (User)
  string type = 5;
}